# songfetch

./: .gitignore  README.md  file.txt  main.py  pyproject.toml
.github/workflows/: update-formula.yml
Formula/: songfetch.rb
assets/: default_art.txt
src/: ascii_convert.py  main.py  player_utils.py  test.py
src/songfetch/: __init__.py  ascii_convert.py  main.py  player_utils.py  player_utils_mac.py
